Create file to customize for Planswell

--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -4,6 +4,8 @@ $bootstrap: #6f5499
 $github: #333333
 $twitter: #55acee
 
+@import "../sass/utilities/initial-variables"
+@import "./_sass/planswell"
 @import "../bulma"
 @import "./_sass/highlight"
 @import "./_sass/override"
