--- a/docs/_sass/planswell.scss
+++ b/docs/_sass/planswell.scss
@@ -1,15 +1,5 @@
-$blue: #72d0eb;
-// Add pink and its invert
-$pink: #ffb3b3;
-$pink-invert: #fff;
-// Add a serif family
-$family-serif: "Merriweather", "Georgia", serif;
+// Set the Planswell override variables here
 
-// 3. Set the derived variables
-// Use the new pink as the primary color
-$primary: $orange;
-$primary-invert: $pink-invert;
-// Use the existing orange as the danger color
-$danger: $orange;
-// Use the new serif family
-$family-primary: $family-serif;
+$primary: hsl(149, 76%, 37%);
+$card-header-color: red;
+$radius-large: 0px;
