Use static links for stylesheets since we are sharing it with web developers

--- a/docs/_includes/getting-started.html
+++ b/docs/_includes/getting-started.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hello Bulma!</title>
-    <link rel="stylesheet" href="https://cdn.rawgit.com/planswell/bulma/36de8025/docs/css/bulma-docs.css">
+    <link rel="stylesheet" href="https://rawgit.com/planswell/bulma/master/docs/css/bulma-docs.css">
   </head>
   <body>
   <section class="section">
