First round of bulma customizations. The bulk of the work can be seen working together in pages titled 'example-page...' in the docs folder.

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -10138,12 +10138,16 @@ section.main-column {
   box-shadow: 0 2px 14px rgba(61, 66, 67, 0.15);
 }
 
-section.onboarding-column {
-  margin-bottom: 175px;
-}
-
 section .inner-column {
   padding: 1.85rem 3.65rem 4rem;
+}
+
+section .inner-column.onboarding-column::after {
+  position: relative;
+  display: inline-block;
+  content: '';
+  height: 170px;
+  width: inherit;
 }
 
 section .container {
@@ -10163,7 +10167,7 @@ section .container {
   width: 480px;
   height: auto;
   margin: 0 auto;
-  padding: 1.75rem 2.5rem 2.5rem;
+  padding: 1.75rem 2.5rem 2rem;
   z-index: 11;
   top: 10%;
   background-color: #fff;
@@ -10175,7 +10179,7 @@ section .container {
 }
 
 .modal-wrapper .modal-window h5 {
-  margin-top: 1rem;
+  margin-top: 1.25rem;
   color: #a6afb0;
   text-align: center;
 }
@@ -10472,7 +10476,6 @@ input[type="number"] {
   border: none;
   border-bottom: 1px solid #d0d6d8;
   font-size: 1.05rem;
-  min-width: 55px;
   width: 55px;
   margin-right: 6px;
   color: #139652;
@@ -10480,6 +10483,11 @@ input[type="number"] {
   -webkit-transition: all 300ms ease;
   -moz-transition: all 300ms ease;
   -o-transition: all 300ms ease;
+}
+
+input[type="text"] .three-figure-value,
+input[type="number"] .three-figure-value {
+  width: 40px;
 }
 
 input[type="text"]::placeholder,
@@ -10604,11 +10612,12 @@ input[type="number"]:focus {
     max-width: 100%;
     width: 100%;
   }
-  section.onboarding-column {
-    margin-bottom: 165px;
-  }
   section .inner-column {
     padding: 1.25rem 2.65rem 3rem;
+  }
+  section .inner-column.onboarding-column::after {
+    content: '';
+    height: 150px;
   }
   .box.is-three-quarter-width {
     width: 100%;
@@ -10624,12 +10633,13 @@ input[type="number"]:focus {
   .header .header-inner .contact-text-link {
     font-size: 0.95rem;
   }
-  section.onboarding-column {
-    margin-bottom: 150px;
-  }
   section .inner-column {
     padding: 1.25rem 1.85rem 3rem;
     overflow: scroll;
+  }
+  section .inner-column.onboarding-column::after {
+    content: '';
+    height: 150px;
   }
   .field.ordered-field {
     padding-left: 1.15rem;
