--- a/docs/_sass/planswell-overrides.scss
+++ b/docs/_sass/planswell-overrides.scss
@@ -97,12 +97,16 @@ section{
     box-shadow: $box-shadow;
   }
 
-  &.onboarding-column {
-    margin-bottom: 175px;
-  }
-
   .inner-column {
     padding: 1.85rem 3.65rem 4rem;
+
+    &.onboarding-column::after {
+      position: relative;
+      display: inline-block;
+      content: '';
+      height: 170px;
+      width: inherit;
+    }
   }
 
   .container {
@@ -122,7 +126,7 @@ section{
     width: 480px;
     height: auto;
     margin: 0 auto;
-    padding: 1.75rem 2.5rem 2.5rem;
+    padding: 1.75rem 2.5rem 2rem;
     z-index: 11;
     top: 10%;
     background-color: $white;
@@ -133,7 +137,7 @@ section{
     }
 
     h5 {
-      margin-top: 1rem;
+      margin-top: 1.25rem;
       color: $grey-light;
       text-align: center;
     }
@@ -424,11 +428,14 @@ label {
     border: none;
     border-bottom: 1px solid $grey-lighter;
     font-size: $size-5;
-    min-width: 55px;
     width: 55px;
     margin-right: 6px;
     color: $primary-dark;
     transition: $transition-standard-ease; -webkit-transition: $transition-standard-ease; -moz-transition: $transition-standard-ease; -o-transition: $transition-standard-ease;
+
+    .three-figure-value {
+        width: 40px;
+      }
 
     &::placeholder {
       color: $grey-lighter;
@@ -550,12 +557,13 @@ label {
       width: 100%;
     }
 
-    &.onboarding-column {
-      margin-bottom: 165px;
-    }
-
     .inner-column {
       padding: 1.25rem 2.65rem 3rem;
+
+      &.onboarding-column::after {
+        content: '';
+        height: 150px;
+      }
     }
   }
 
@@ -585,13 +593,14 @@ label {
   }
 
   section{
-    &.onboarding-column {
-      margin-bottom: 150px;
-    }
-
     .inner-column {
       padding: 1.25rem 1.85rem 3rem;
       overflow: scroll;
+
+      &.onboarding-column::after {
+        content: '';
+        height: 150px;
+      }
     }
   }
 
