--- a/docs/_sass/planswell-overrides.scss
+++ b/docs/_sass/planswell-overrides.scss
@@ -43,6 +43,7 @@ h5 { font-size: $size-6; }
 p  { font-size: $size-5; }
 
 //Text Utility classes
+.is-centred-text {text-align: center;}
 .italic {font-style: italic;}
 .weight-regular {font-weight: $weight-normal;}
 .grey-darker {color: $grey-darker;}
@@ -57,8 +58,39 @@ p  { font-size: $size-5; }
 }
 
 a {
-  .grey-text-link { color: $grey-light; }
-  .investment-text-link { color: $investments; }
+  cursor: pointer;
+  &.grey-text-link {
+    color: $grey-light;
+
+    &.top-padded-link {
+      padding-top: 10px;
+    }
+  }
+  &.investment-text-link { color: $investments; }
+  &.additional-toggle {
+    display: inline-block;
+    color: $grey-light;
+
+    &::after {
+      margin-left: 6px;
+      content: $plus-icon;
+    }
+  }
+}
+
+.table-heading-wrapper {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: auto;
+  margin-bottom: 0.85rem;
+
+  h5 {
+    display: inline-block;
+    font-weight: $weight-bold;
+    color: $grey;
+    margin-bottom: 0rem;
+  }
 }
 
 //==================//
@@ -67,7 +99,7 @@ a {
 .header {
   width: 100%;
   height: auto;
-  padding: 1.5rem 1.5rem 1.5rem;
+  padding: 1.35rem 1.5rem 1.5rem;
   border-bottom: 1px solid $white-smoke;
 
   .header-inner {
@@ -95,6 +127,7 @@ section{
     padding: 0;
     margin: 0 auto;
     box-shadow: $box-shadow;
+    overflow: scroll;
   }
 
   .inner-column {
@@ -102,7 +135,7 @@ section{
 
     &.onboarding-column::after {
       position: relative;
-      display: inline-block;
+      display: flex;
       content: '';
       height: 170px;
       width: inherit;
@@ -177,6 +210,10 @@ section{
     .button-wrapper {
       display: flex;
       justify-content: center;
+
+      &.modal-button-wrapper {
+        justify-content: space-between;
+      }
     }
   }
 }
@@ -207,7 +244,25 @@ section{
   padding: 1.5rem 3.65rem 7.75rem 3.65rem;
   position: fixed;
   bottom: 0;
+  border-top: 1px solid $white-smoke;
   z-index: 2;
+
+  .footer-link-wrapper {
+    display: flex;
+    justify-content: space-between;
+    height: 50px;
+    margin-bottom: 1rem;
+
+    a.details-toggle {
+      padding-top: 10px;
+      color: $grey-light;
+      transition: $transition-standard-ease; -webkit-transition: $transition-standard-ease; -moz-transition: $transition-standard-ease; -o-transition: $transition-standard-ease;
+
+      &:hover {
+        color: $grey;
+      }
+    }
+  }
 
   .progress-bar {
     position: relative;
@@ -252,6 +307,32 @@ button,
     background-color: $primary-dark;
     color: $white;
   }
+
+  &.is-small {
+    border-radius: $radius-small;
+    font-size: $size-6;
+    height: 2.15rem;
+    padding-left: $button-padding-left-small;
+    padding-right: $button-padding-right-small;
+  }
+
+  &.is-button-centred {
+    position: relative;
+    margin: 0 auto;
+  }
+
+  .icon .fa {
+    font-size: $size-7;
+  }
+
+  .icon:first-child:last-child {
+    font-size: $size-7;
+    color: inherit;
+
+    &.icon-right {
+      margin-left: 4px;
+    }
+  }
 }
 
 //Outlined-button
@@ -274,6 +355,7 @@ button,
       border-color: $investments-hover;
     }
   }
+
   &.is-insurance {
     color: $insurance-dark;
     border-color: $insurance;
@@ -288,6 +370,16 @@ button,
 
     &:hover {
       border-color: $insurance-dark;
+    }
+  }
+
+  &.is-grey {
+    color: $grey-light;
+    border-color: $grey-lighter;
+
+    &:hover {
+      color: $grey;
+      border-color: $grey-light;
     }
   }
 }
@@ -312,6 +404,23 @@ button,
   &:hover {
     background-color: $borrowing-hover;
     color: $white;
+  }
+}
+
+.wrapper {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: auto;
+  margin: 0.85rem 0rem;
+
+  &.is-flex-justified {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &.is-flex-centred {
+    justify-content: center;
   }
 }
 
@@ -357,6 +466,38 @@ button,
   &.ordered-field {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
+
+    &.error-field {
+      font-size: $size-6;
+      padding-top: 0.65rem;
+      padding-bottom: 0.95rem;
+      background-color: $insurance-hover;
+
+      p {
+        font-size: inherit;
+        margin-bottom: 0rem;
+        color: $white;
+      }
+
+      a {
+        font-size: inherit;
+        font-weight: $weight-bold;
+        padding-bottom: 0.025rem;
+        border-bottom: 1px solid $white;
+        color: $white;
+        cursor: pointer;
+        margin-right: 0.45rem;
+        transition: all 150ms ease; -webkit-transition: all 150ms ease; -moz-transition: all 150ms ease; -o-transition: all 150ms ease;
+
+        &:hover {
+          padding-bottom: 0.125rem;
+        }
+
+        &:last-child::after {
+          margin-right: 0rem;
+        }
+      }
+    }
   }
 
   .input-note {
@@ -376,6 +517,65 @@ button,
 }
 .field:last-child {
   padding-bottom: 0px;
+}
+
+//Tool tip hover
+.is-tool-tip {
+  visibility: visible;
+  display: inline-block;
+  width: 1rem;
+  height: 1rem;
+  margin-left: 0.30rem;
+  background-image: url('/images/tool-tip-icon.svg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  cursor: pointer;
+  transition: $transition-standard-ease; -webkit-transition: $transition-standard-ease; -moz-transition: $transition-standard-ease; -o-transition: $transition-standard-ease;
+}
+
+.tooltiptext {
+  visibility: hidden;
+  position: absolute;
+  width: 240px;
+  background-color: $white;
+  font-size: $size-6;
+  line-height: $line-height-normal;
+  color: $grey;
+  padding: 0.85rem 1rem;
+  border-radius: 6px;
+  box-shadow: $box-shadow;
+  margin-top: -50px;
+  z-index: 9;
+}
+
+// Show on hover
+.is-tool-tip:hover .tooltiptext {
+    visibility: visible;
+}
+
+
+.dot-indicator-wrapper {
+  display: flex;
+  float: left;
+  height: 0.30rem;
+
+  .dot-indicator {
+    position: relative;
+    display: inline-block;
+    width: 0.30rem;
+    height: 0.30rem;
+    background-color: $grey-lighter;
+    border-radius: 50%;
+    margin-right: 0.25rem;
+
+    &:last-child {
+      margin-right: 0;
+    }
+
+    &.active {
+      background-color: $grey;
+    }
+  }
 }
 
 // Radio inputs
@@ -429,13 +629,22 @@ label {
     border-bottom: 1px solid $grey-lighter;
     font-size: $size-5;
     width: 55px;
-    margin-right: 6px;
     color: $primary-dark;
     transition: $transition-standard-ease; -webkit-transition: $transition-standard-ease; -moz-transition: $transition-standard-ease; -o-transition: $transition-standard-ease;
 
-    .three-figure-value {
-        width: 40px;
-      }
+    &.erroroneous-value {
+      color: $insurance-hover;
+      border-color: $insurance-hover;
+    }
+
+    &.three-figure-value {
+        width: 33px;
+        min-width: 33px;
+
+        &::placeholder {
+          color: $grey-dark;
+        }
+    }
 
     &::placeholder {
       color: $grey-lighter;
@@ -460,6 +669,7 @@ label {
     position: absolute;
     left: -9999px;
   }
+
   [type="checkbox"]:not(:checked) + label,
   [type="checkbox"]:checked + label {
     position: relative;
@@ -480,17 +690,18 @@ label {
     background: #fff;
     border-radius: 1.25em;
     box-shadow: inset 0 1px 3px rgba(0,0,0,.01);
+    transition: $transition-standard-ease; -webkit-transition: $transition-standard-ease; -moz-transition: $transition-standard-ease; -o-transition: $transition-standard-ease;
   }
+
   /* checked mark aspect */
   [type="checkbox"]:not(:checked) + label:after,
   [type="checkbox"]:checked + label:after {
-    content: '✔';
     position: absolute;
-    top: 0.35rem;
-    left: .55em;
-    font-size: .75rem;
-    line-height: 0.8;
-    color: $white;
+    content: $check-mark-white;
+    width: 17px;
+    height: 10px;
+    top: 0.05rem;
+    left: 0.15rem;
     transition: all 200ms;
   }
 
@@ -511,11 +722,13 @@ label {
 
   [type="checkbox"]:checked:focus + label:before {
     background-color: $primary;
+    border-color: $primary;
   }
 
   [type="checkbox"]:not(:checked):focus + label:before,
   [type="checkbox"]:not(:checked):focus {
     background-color: $primary;
+    border-color: $primary;
   }
 
 //===============
@@ -533,7 +746,7 @@ label {
 
 @media screen and (max-height: 767px) {
   .survey-footer {
-    padding-bottom: 3rem;
+    padding-bottom: 2.35rem;
   }
 }
 
@@ -562,7 +775,7 @@ label {
 
       &.onboarding-column::after {
         content: '';
-        height: 150px;
+        height: 165px;
       }
     }
   }
@@ -616,9 +829,14 @@ label {
 
   .survey-footer {
     padding: 1.35rem 1.85rem 3rem;
+    padding-bottom: 12%;
+
+    .footer-link-wrapper {
+      display: flex;
+      justify-content: space-between;
+    }
 
     .button-next-wrapper {
-      height: 38px;
       margin-bottom: 0.75rem;
     }
     .progress-bar {
@@ -641,6 +859,7 @@ label {
 
   .back-button-wrapper {
     margin-bottom: 1.5rem;
+
     .back-button {
       width: 19px;
       height: 14px;
