--- a/docs/_sass/planswell-variables.scss
+++ b/docs/_sass/planswell-variables.scss
@@ -16,7 +16,7 @@ $planswell-portfolios-logo: url('/images/pp-logo.svg');
 $back-arrow: url('/images/arrow-left-grey.svg');
 $plus-icon: url('/images/plus-icon-grey.svg');
 $check-mark-white: url('/images/check-mark-white.svg');
-$tool-tip-grey: url('/images/tool-tip-icon.svg');
+$tool-tip-grey: url('/images/tool-tip-icon-grey.svg');
 
 //==================//
 // Typography
@@ -35,7 +35,7 @@ $size-7: 0.75rem;
 //Line-heights
 $line-height-normal: 140%;
 $line-height-large: 145%;
-$line-height-small: 125%;
+$line-height-small: 126%;
 
 
 //==================//
