--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -10022,7 +10022,7 @@ h1, h2, h3, h4, h5, p {
 }
 
 h1, h2, h3, h4 {
-  line-height: 125%;
+  line-height: 126%;
   font-weight: 700;
 }
 
@@ -10585,7 +10585,7 @@ button .icon:first-child:last-child.icon-right,
   width: 1rem;
   height: 1rem;
   margin-left: 0.30rem;
-  background-image: url("/images/tool-tip-icon.svg");
+  background-image: url("/images/tool-tip-icon-grey.svg");
   background-repeat: no-repeat;
   background-size: cover;
   cursor: pointer;
@@ -10607,7 +10607,7 @@ button .icon:first-child:last-child.icon-right,
   border-radius: 6px;
   box-shadow: 0 2px 14px rgba(61, 66, 67, 0.15);
   margin-top: -50px;
-  z-index: 9;
+  z-index: 10;
 }
 
 .is-tool-tip:hover .tooltiptext {
