--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -7,22 +7,24 @@ $twitter: #55acee
 @import "../sass/utilities/initial-variables"
 @import "./_sass/planswell-variables"
 @import "../bulma"
-@import "./_sass/highlight"
-@import "./_sass/override"
-@import "./_sass/global"
-@import "./_sass/index"
-@import "./_sass/header"
-@import "./_sass/footer"
-@import "./_sass/specific"
-@import "./_sass/example"
-@import "./_sass/callout"
-@import "./_sass/bsa"
-@import "./_sass/route"
-@import "./_sass/twitter"
-@import "./_sass/expo"
-@import "./_sass/love"
-@import "./_sass/bootstrap"
-@import "./_sass/planswell-overrides"
+
+.bulma
+  @import "./_sass/highlight"
+  @import "./_sass/override"
+  @import "./_sass/global"
+  @import "./_sass/index"
+  @import "./_sass/header"
+  @import "./_sass/footer"
+  @import "./_sass/specific"
+  @import "./_sass/example"
+  @import "./_sass/callout"
+  @import "./_sass/bsa"
+  @import "./_sass/route"
+  @import "./_sass/twitter"
+  @import "./_sass/expo"
+  @import "./_sass/love"
+  @import "./_sass/bootstrap"
+  @import "./_sass/planswell-overrides"
 
 \:root
   --primary: #{$primary}
