Wrap styles in class without breaking CSS changes

--- a/docs/_sass/planswell-overrides.scss
+++ b/docs/_sass/planswell-overrides.scss
@@ -2,8 +2,9 @@
 //==================//
 // Global
 //==================//
-html, body {
+body {
   height: 100%;
+  box-sizing: border-box;
   background-color: $white-smoke;
 }
 
