--- a/docs/_sass/planswell-variables.scss
+++ b/docs/_sass/planswell-variables.scss
@@ -4,7 +4,7 @@
 // Global
 //==================//
 //Screen sizes
-$mobile: 479px !default
+$mobile: 479px !default;
 $tablet-onboarding: 660px;
 
 //==================//
