--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -28,6 +28,8 @@
   <meta name="twitter:image" content="{{site.url}}/images/bulma-banner.png">
   <meta name="twitter:description" content="{{site.description}}">
 
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+
   <link rel="apple-touch-icon" sizes="180x180" href="{{site.url}}/favicons/apple-touch-icon.png?v=201701041855">
   <link rel="icon" type="image/png" href="{{site.url}}/favicons/favicon-32x32.png?v=201701041855" sizes="32x32">
   <link rel="icon" type="image/png" href="{{site.url}}/favicons/favicon-16x16.png?v=201701041855" sizes="16x16">
