Only buttons should have radiuses

--- a/docs/_sass/planswell-overrides.scss
+++ b/docs/_sass/planswell-overrides.scss
@@ -333,7 +333,7 @@ button,
   height: 2.85rem;
   font-size: $size-5;
   line-height: 100%;
-  border-radius: $radius;
+  border-radius: $button-radius;
   padding-left: $button-padding-left-default;
   padding-right: $button-padding-left-default;
   padding-top: calc(0.4rem - 1px);
