--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -7616,12 +7616,12 @@ html.bulma {
 }
 
 .bulma .hero.is-light.is-bold {
-  background-image: linear-gradient(141deg, #dfd8d8 0%, whitesmoke 71%, white 100%);
+  background-image: linear-gradient(141deg, #dfd8d9 0%, whitesmoke 71%, white 100%);
 }
 
 @media screen and (max-width: 768px) {
   .bulma .hero.is-light.is-bold .nav-menu {
-    background-image: linear-gradient(141deg, #dfd8d8 0%, whitesmoke 71%, white 100%);
+    background-image: linear-gradient(141deg, #dfd8d9 0%, whitesmoke 71%, white 100%);
   }
 }
 
@@ -7712,12 +7712,12 @@ html.bulma {
 }
 
 .bulma .hero.is-dark.is-bold {
-  background-image: linear-gradient(141deg, #1f1919 0%, #363636 71%, #463f3f 100%);
+  background-image: linear-gradient(141deg, #1f191a 0%, #363636 71%, #46403f 100%);
 }
 
 @media screen and (max-width: 768px) {
   .bulma .hero.is-dark.is-bold .nav-menu {
-    background-image: linear-gradient(141deg, #1f1919 0%, #363636 71%, #463f3f 100%);
+    background-image: linear-gradient(141deg, #1f191a 0%, #363636 71%, #46403f 100%);
   }
 }
 
@@ -10395,7 +10395,7 @@ html.bulma {
   height: 2.85rem;
   font-size: 1.05rem;
   line-height: 100%;
-  border-radius: 0.375rem;
+  border-radius: 2.85rem;
   padding-left: 1.75rem;
   padding-right: 1.75rem;
   padding-top: calc(0.4rem - 1px);
