Reseting type scale to 100 percent

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -10009,6 +10009,10 @@ html.bulma {
   margin-bottom: 3rem;
 }
 
+.bulma html {
+  font-size: 100%;
+}
+
 .bulma body {
   height: 100%;
   box-sizing: border-box;
