--- a/docs/_sass/planswell-overrides.scss
+++ b/docs/_sass/planswell-overrides.scss
@@ -2,6 +2,9 @@
 //==================//
 // Global
 //==================//
+html {
+  font-size: 100%;
+}
 body {
   height: 100%;
   box-sizing: border-box;
