--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -6,11 +6,15 @@ html.bulma {
 .bulma {
   /*! bulma.io v0.5.0 | MIT License | github.com/jgthms/bulma */
   /*! minireset.css v0.0.2 | MIT License | github.com/jgthms/minireset.css */
-  /* checkbox aspect */
-  /* checked mark aspect */
-  /*[type="checkbox"]:not(:checked) + label:after,*/
-  /* checked mark aspect changes */
-  /* accessibility */
+  /*
+width: 1.65rem;
+height: 1.65rem;
+border: 2px solid $grey-lighter;
+background: #fff;
+border-radius: $button-radius;
+box-shadow: none;
+transition: $transition-standard-ease; -webkit-transition: $transition-standard-ease; -moz-transition: $transition-standard-ease; -o-transition: $transition-standard-ease;
+*/
 }
 
 @keyframes spinAround {
@@ -497,42 +501,42 @@ html.bulma {
 }
 
 .bulma .is-size-7 {
-  font-size: 0.75rem !important;
+  font-size: 0.85rem !important;
 }
 
 @media screen and (max-width: 768px) {
   .bulma .is-size-7-mobile {
-    font-size: 0.75rem !important;
+    font-size: 0.85rem !important;
   }
 }
 
 @media screen and (min-width: 769px), print {
   .bulma .is-size-7-tablet {
-    font-size: 0.75rem !important;
+    font-size: 0.85rem !important;
   }
 }
 
 @media screen and (max-width: 1007px) {
   .bulma .is-size-7-touch {
-    font-size: 0.75rem !important;
+    font-size: 0.85rem !important;
   }
 }
 
 @media screen and (min-width: 1008px) {
   .bulma .is-size-7-desktop {
-    font-size: 0.75rem !important;
+    font-size: 0.85rem !important;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .bulma .is-size-7-widescreen {
-    font-size: 0.75rem !important;
+    font-size: 0.85rem !important;
   }
 }
 
 @media screen and (min-width: 1392px) {
   .bulma .is-size-7-fullhd {
-    font-size: 0.75rem !important;
+    font-size: 0.85rem !important;
   }
 }
 
@@ -1979,7 +1983,7 @@ html.bulma {
 
 .bulma .button.is-small {
   border-radius: 0rem;
-  font-size: 0.75rem;
+  font-size: 0.85rem;
 }
 
 .bulma .button.is-medium {
@@ -2198,7 +2202,7 @@ html.bulma {
 }
 
 .bulma .content.is-small {
-  font-size: 0.75rem;
+  font-size: 0.85rem;
 }
 
 .bulma .content.is-medium {
@@ -2344,7 +2348,7 @@ html.bulma {
 .bulma .input.is-small,
 .bulma .textarea.is-small {
   border-radius: 0rem;
-  font-size: 0.75rem;
+  font-size: 0.85rem;
 }
 
 .bulma .input.is-medium,
@@ -2580,7 +2584,7 @@ html.bulma {
 
 .bulma .select.is-small {
   border-radius: 0rem;
-  font-size: 0.75rem;
+  font-size: 0.85rem;
 }
 
 .bulma .select.is-medium {
@@ -2622,7 +2626,7 @@ html.bulma {
 }
 
 .bulma .select.is-loading.is-small:after {
-  font-size: 0.75rem;
+  font-size: 0.85rem;
 }
 
 .bulma .select.is-loading.is-medium:after {
@@ -2862,7 +2866,7 @@ html.bulma {
 }
 
 .bulma .file.is-small {
-  font-size: 0.75rem;
+  font-size: 0.85rem;
 }
 
 .bulma .file.is-medium {
@@ -3075,7 +3079,7 @@ html.bulma {
 }
 
 .bulma .label.is-small {
-  font-size: 0.75rem;
+  font-size: 0.85rem;
 }
 
 .bulma .label.is-medium {
@@ -3088,7 +3092,7 @@ html.bulma {
 
 .bulma .help {
   display: block;
-  font-size: 0.75rem;
+  font-size: 0.85rem;
   margin-top: 0.25rem;
 }
 
@@ -3278,7 +3282,7 @@ html.bulma {
     text-align: right;
   }
   .bulma .field-label.is-small {
-    font-size: 0.75rem;
+    font-size: 0.85rem;
     padding-top: 0.375em;
   }
   .bulma .field-label.is-normal {
@@ -3340,7 +3344,7 @@ html.bulma {
 }
 
 .bulma .control.has-icon .input.is-small + .icon {
-  font-size: 0.75rem;
+  font-size: 0.85rem;
 }
 
 .bulma .control.has-icon .input.is-medium + .icon {
@@ -3376,7 +3380,7 @@ html.bulma {
 .bulma .control.has-icons-left .input.is-small ~ .icon,
 .bulma .control.has-icons-left .select.is-small ~ .icon, .bulma .control.has-icons-right .input.is-small ~ .icon,
 .bulma .control.has-icons-right .select.is-small ~ .icon {
-  font-size: 0.75rem;
+  font-size: 0.85rem;
 }
 
 .bulma .control.has-icons-left .input.is-medium ~ .icon,
@@ -3436,7 +3440,7 @@ html.bulma {
 }
 
 .bulma .control.is-loading.is-small:after {
-  font-size: 0.75rem;
+  font-size: 0.85rem;
 }
 
 .bulma .control.is-loading.is-medium:after {
@@ -3749,7 +3753,7 @@ html.bulma {
 }
 
 .bulma .progress.is-small {
-  height: 0.75rem;
+  height: 0.85rem;
 }
 
 .bulma .progress.is-medium {
@@ -3955,7 +3959,7 @@ html.bulma {
   border-radius: 0rem;
   color: #6c7375;
   display: inline-flex;
-  font-size: 0.75rem;
+  font-size: 0.85rem;
   height: 2em;
   justify-content: center;
   line-height: 1.5;
@@ -4133,7 +4137,7 @@ html.bulma {
 }
 
 .bulma .title.is-7 {
-  font-size: 0.75rem;
+  font-size: 0.85rem;
 }
 
 .bulma .subtitle {
@@ -4177,7 +4181,7 @@ html.bulma {
 }
 
 .bulma .subtitle.is-7 {
-  font-size: 0.75rem;
+  font-size: 0.85rem;
 }
 
 .bulma .block:not(:last-child) {
@@ -4442,7 +4446,7 @@ html.bulma {
 }
 
 .bulma .breadcrumb.is-small {
-  font-size: 0.75rem;
+  font-size: 0.85rem;
 }
 
 .bulma .breadcrumb.is-medium {
@@ -4778,7 +4782,7 @@ html.bulma {
 }
 
 .bulma .menu.is-small {
-  font-size: 0.75rem;
+  font-size: 0.85rem;
 }
 
 .bulma .menu.is-medium {
@@ -4842,7 +4846,7 @@ html.bulma {
 }
 
 .bulma .message.is-small {
-  font-size: 0.75rem;
+  font-size: 0.85rem;
 }
 
 .bulma .message.is-medium {
@@ -5761,7 +5765,7 @@ html.bulma {
 }
 
 .bulma .pagination.is-small {
-  font-size: 0.75rem;
+  font-size: 0.85rem;
 }
 
 .bulma .pagination.is-medium {
@@ -6213,7 +6217,7 @@ html.bulma {
 }
 
 .bulma .tabs.is-small {
-  font-size: 0.75rem;
+  font-size: 0.85rem;
 }
 
 .bulma .tabs.is-medium {
@@ -8643,7 +8647,7 @@ html.bulma {
 .bulma #carbonads .carbon-poweredby {
   bottom: 0;
   color: #888f91;
-  font-size: 0.75rem;
+  font-size: 0.85rem;
   left: 160px;
   line-height: 20px;
   padding: 0 15px 10px 0;
@@ -10011,6 +10015,8 @@ html.bulma {
 
 .bulma html {
   font-size: 100%;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .bulma body {
@@ -10399,7 +10405,7 @@ html.bulma {
   height: 2.85rem;
   font-size: 1.05rem;
   line-height: 100%;
-  border-radius: 2.85rem;
+  border-radius: 2.15rem;
   padding-left: 1.75rem;
   padding-right: 1.75rem;
   padding-top: calc(0.4rem - 1px);
@@ -10420,11 +10426,17 @@ html.bulma {
 
 .bulma button.is-small,
 .bulma .button.is-small {
-  border-radius: 0rem;
+  border-radius: 2.15rem;
   font-size: 0.95rem;
   height: 2.15rem;
   padding-left: 1.25rem;
   padding-right: 1.25rem;
+}
+
+.bulma button.is-large,
+.bulma .button.is-large {
+  font-size: 1.35rem;
+  height: 2.85rem;
 }
 
 .bulma button.is-button-centred,
@@ -10435,12 +10447,12 @@ html.bulma {
 
 .bulma button .icon .fa,
 .bulma .button .icon .fa {
-  font-size: 0.75rem;
+  font-size: 0.85rem;
 }
 
 .bulma button .icon:first-child:last-child,
 .bulma .button .icon:first-child:last-child {
-  font-size: 0.75rem;
+  font-size: 0.85rem;
   color: inherit;
 }
 
@@ -10559,6 +10571,10 @@ html.bulma {
   padding-left: 6px;
 }
 
+.bulma .box {
+  border-radius: 0.325rem;
+}
+
 .bulma .box.ordered-box {
   padding-left: 0rem;
   padding-right: 0rem;
@@ -10624,13 +10640,13 @@ html.bulma {
 
 .bulma ul.portfolio-allocation-bar li:first-child {
   background-color: #166cd4;
-  border-top-left-radius: 0rem;
-  border-bottom-left-radius: 0rem;
+  border-top-left-radius: 0.325rem;
+  border-bottom-left-radius: 0.325rem;
 }
 
 .bulma ul.portfolio-allocation-bar li:last-child {
-  border-top-right-radius: 0rem;
-  border-bottom-right-radius: 0rem;
+  border-top-right-radius: 0.325rem;
+  border-bottom-right-radius: 0.325rem;
 }
 
 .bulma ul.portfolio-allocation-breakdown {
@@ -10802,7 +10818,7 @@ html.bulma {
   line-height: 140%;
   color: #888f91;
   padding: 0.85rem 1rem;
-  border-radius: 0rem;
+  border-radius: 0.325rem;
   box-shadow: 0 2px 14px rgba(61, 66, 67, 0.15);
   margin-top: -50px;
   z-index: 10;
@@ -10860,10 +10876,11 @@ html.bulma {
   color: #d0d6d8;
 }
 
-.bulma label {
+.bulma label,
+.bulma .label {
   display: inline-block;
-  font-size: 1.05rem;
-  color: #6c7375;
+  font-size: 0.85rem;
+  color: #888f91;
   height: auto;
   transition: all 300ms ease;
   -webkit-transition: all 300ms ease;
@@ -10871,24 +10888,28 @@ html.bulma {
   -o-transition: all 300ms ease;
 }
 
-.bulma label:hover {
+.bulma label:hover,
+.bulma .label:hover {
   color: #363636;
 }
 
-.bulma label.figure-right {
+.bulma label.figure-right,
+.bulma .label.figure-right {
   display: inline-block;
   color: #363636;
   float: right;
 }
 
-.bulma label.figure-right.is-goals {
+.bulma label.figure-right.is-goals,
+.bulma .label.figure-right.is-goals {
   display: inline-block;
   font-size: 0.95rem;
   width: 50%;
   height: auto;
 }
 
-.bulma label.figure-right.is-goals .root-goal {
+.bulma label.figure-right.is-goals .root-goal,
+.bulma .label.figure-right.is-goals .root-goal {
   font-weight: 700;
 }
 
@@ -10920,45 +10941,107 @@ html.bulma {
 }
 
 .bulma input[type="text"],
-.bulma input[type="number"] {
+.bulma input[type="number"],
+.bulma input[type="email"],
+.bulma input[type="password"],
+.bulma .select select {
   border: none;
   border-bottom: 1px solid #d0d6d8;
   font-size: 1.05rem;
-  width: 55px;
-  color: #139652;
+  width: auto;
+  color: #6c7375;
   transition: all 300ms ease;
   -webkit-transition: all 300ms ease;
   -moz-transition: all 300ms ease;
   -o-transition: all 300ms ease;
 }
 
-.bulma input[type="text"].erroroneous-value,
-.bulma input[type="number"].erroroneous-value {
+.bulma input[type="text"]::placeholder,
+.bulma input[type="number"]::placeholder,
+.bulma input[type="email"]::placeholder,
+.bulma input[type="password"]::placeholder,
+.bulma .select select::placeholder {
+  color: #d0d6d8;
+}
+
+.bulma input[type="text"]:focus,
+.bulma input[type="number"]:focus,
+.bulma input[type="email"]:focus,
+.bulma input[type="password"]:focus,
+.bulma .select select:focus {
+  color: #6c7375;
+  box-shadow: 0;
+  outline: none;
+  border-bottom: 1px solid #17a65c;
+}
+
+.bulma input[type="text"].is-success,
+.bulma input[type="number"].is-success,
+.bulma input[type="email"].is-success,
+.bulma input[type="password"].is-success,
+.bulma .select select.is-success {
+  color: #17a65c;
+}
+
+.bulma input[type="text"].is-danger,
+.bulma input[type="number"].is-danger,
+.bulma input[type="email"].is-danger,
+.bulma input[type="password"].is-danger,
+.bulma .select select.is-danger {
   color: #da511b;
-  border-color: #da511b;
+}
+
+.bulma input[type="text"].is-success:focus, .bulma input[type="text"].is-danger:focus,
+.bulma input[type="number"].is-success:focus,
+.bulma input[type="number"].is-danger:focus,
+.bulma input[type="email"].is-success:focus,
+.bulma input[type="email"].is-danger:focus,
+.bulma input[type="password"].is-success:focus,
+.bulma input[type="password"].is-danger:focus,
+.bulma .select select.is-success:focus,
+.bulma .select select.is-danger:focus {
+  color: #363636;
 }
 
 .bulma input[type="text"].three-figure-value,
-.bulma input[type="number"].three-figure-value {
+.bulma input[type="number"].three-figure-value,
+.bulma input[type="email"].three-figure-value,
+.bulma input[type="password"].three-figure-value,
+.bulma .select select.three-figure-value {
   width: 33px;
   min-width: 33px;
 }
 
 .bulma input[type="text"].three-figure-value::placeholder,
-.bulma input[type="number"].three-figure-value::placeholder {
+.bulma input[type="number"].three-figure-value::placeholder,
+.bulma input[type="email"].three-figure-value::placeholder,
+.bulma input[type="password"].three-figure-value::placeholder,
+.bulma .select select.three-figure-value::placeholder {
   color: #6c7375;
 }
 
-.bulma input[type="text"]::placeholder,
-.bulma input[type="number"]::placeholder {
-  color: #d0d6d8;
+.bulma .input[type="text-area"],
+.bulma .textarea {
+  box-shadow: none;
+  border-color: #d0d6d8;
 }
 
-.bulma input[type="text"]:focus,
-.bulma input[type="number"]:focus {
-  box-shadow: 0;
-  outline: none;
-  border-bottom: 1px solid #17a65c;
+.bulma .input[type="text-area"]:focus,
+.bulma .textarea:focus {
+  color: #6c7375;
+}
+
+.bulma .help {
+  color: #a6afb0;
+  margin-top: 0.325rem;
+}
+
+.bulma .help.is-success {
+  color: #17a65c;
+}
+
+.bulma .help.is-danger {
+  color: #da511b;
 }
 
 .bulma .dollar-input {
@@ -10967,70 +11050,54 @@ html.bulma {
   font-weight: 700;
 }
 
-.bulma [type="checkbox"]:not(:checked),
-.bulma [type="checkbox"]:checked {
+.bulma input[type="radio"],
+.bulma input[type="checkbox"] {
   position: absolute;
-  left: -9999px;
-}
-
-.bulma [type="checkbox"]:not(:checked) + label,
-.bulma [type="checkbox"]:checked + label {
-  position: relative;
-  padding-left: 1.95em;
-  cursor: pointer;
-}
-
-.bulma [type="checkbox"]:not(:checked) + label:before,
-.bulma [type="checkbox"]:checked + label:before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 1.35em;
-  height: 1.35em;
-  border: 2px solid #d0d6d8;
-  background: #fff;
-  border-radius: 1.25em;
-  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.01);
-  transition: all 300ms ease;
-  -webkit-transition: all 300ms ease;
-  -moz-transition: all 300ms ease;
-  -o-transition: all 300ms ease;
-}
-
-.bulma [type="checkbox"]:checked + label:after {
-  position: absolute;
-  content: url("/images/check-mark-white.svg");
-  width: 12px;
-  height: 7px;
-  top: -0.225rem;
-  left: 0.40rem;
-  transition: all 200ms;
-}
-
-.bulma [type="checkbox"]:not(:checked) + label:after {
   opacity: 0;
-  transform: scale(0);
+  visibility: hidden;
+  /*
+  & + label {
+    position: relative;
+    cursor: pointer;
+    padding: 0;
+  }
+
+  & + label:before {
+    content: '';
+    margin-right: 10px;
+    display: inline-block;
+    vertical-align: text-top;
+    width: 1.35rem;
+    height: 1.35rem;
+    background: $white;
+    border-radius: $button-radius;
+  }
+  */
 }
 
-.bulma [type="checkbox"]:checked + label:after {
-  opacity: 1;
-  transform: scale(1);
+.bulma label.radio, .bulma label.checkbox {
+  font-size: 1.05rem;
+  position: relative;
+  cursor: pointer;
+  color: #6c7375;
+  padding: 0;
 }
 
-.bulma [type="checkbox"]:checked:focus + label:before {
-  background-color: #fff;
+.bulma label.radio::before, .bulma label.checkbox::before {
+  content: '';
+  margin-right: 0.325rem;
+  display: inline-block;
+  vertical-align: text-top;
+  width: 1.35rem;
+  height: 1.35rem;
+  background: #fff;
+  border: 1px solid #d0d6d8;
+  border-radius: 2.15rem;
+  padding: 0;
 }
 
-.bulma [type="checkbox"]:checked:focus + label:before {
+.bulma label.radio::before:checked, .bulma label.checkbox::before:checked {
   background-color: #17a65c;
-  border-color: #17a65c;
-}
-
-.bulma [type="checkbox"]:not(:checked):focus + label:before,
-.bulma [type="checkbox"]:not(:checked):focus {
-  background-color: #17a65c;
-  border-color: #17a65c;
 }
 
 @media screen and (min-height: 867px) and (max-height: 1900px) {
@@ -11129,7 +11196,7 @@ html.bulma {
   .bulma .button {
     height: 2.35rem;
     font-size: 0.95rem;
-    border-radius: 0rem;
+    border-radius: 2.15rem;
     padding-left: 1.25rem;
     padding-right: 1.25rem;
   }
@@ -11147,7 +11214,10 @@ html.bulma {
     margin-right: 0rem;
   }
   .bulma input[type="text"],
-  .bulma input[type="number"] {
+  .bulma input[type="number"],
+  .bulma .select,
+  .bulma .select select {
+    width: 100%;
     font-size: 0.95rem;
   }
   .bulma input[type="number"] {
