--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -10013,14 +10013,14 @@ transition: $transition-standard-ease; -webkit-transition: $transition-standard-
   margin-bottom: 3rem;
 }
 
+.bulma :root {
+  font-size: 100% !important;
+}
+
 .bulma html {
   font-size: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-.bulma :root {
-  font-size: 100%;
 }
 
 .bulma body {
@@ -10226,6 +10226,18 @@ transition: $transition-standard-ease; -webkit-transition: $transition-standard-
   color: #a6afb0;
   text-decoration: underline;
   float: right;
+}
+
+.bulma .panel {
+  display: block;
+  background-color: #fff;
+  max-width: 660px;
+  width: 660px;
+  height: 100%;
+  padding: 0;
+  margin: 0 auto;
+  box-shadow: 0 2px 14px rgba(61, 66, 67, 0.15);
+  overflow: scroll;
 }
 
 .bulma section.main-column {
